--- a/terminal/AndroidManifest.xml
+++ b/terminal/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ru.mmb.terminal"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionCode="2"
+    android:versionName="1.1" >
 
     <uses-sdk android:minSdkVersion="10" />
 
@@ -28,6 +28,10 @@
             android:windowSoftInputMode="stateHidden" />
         <activity android:name=".activity.input.data.InputDataActivity" />
         <activity android:name=".activity.input.withdraw.WithdrawMemberActivity" />
+        <activity android:name=".activity.transport.transpimport.TransportImportActivity"></activity><activity android:name=".activity.transport.transpexport.TransportExportActivity"></activity><activity android:name=".activity.settings.SettingsActivity"></activity><activity android:name="com.filedialog.FileDialog"></activity>
+        
+        
+        
     </application>
 
 </manifest>
