--- a/terminal/AndroidManifest.xml
+++ b/terminal/AndroidManifest.xml
@@ -13,9 +13,9 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:label="@string/app_name"
-            android:name=".activity.main.MainActivity" >
-            <intent-filter >
+            android:name=".activity.main.MainActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -28,10 +28,14 @@
             android:windowSoftInputMode="stateHidden" />
         <activity android:name=".activity.input.data.InputDataActivity" />
         <activity android:name=".activity.input.withdraw.WithdrawMemberActivity" />
-        <activity android:name=".activity.transport.transpimport.TransportImportActivity"></activity><activity android:name=".activity.transport.transpexport.TransportExportActivity"></activity><activity android:name=".activity.settings.SettingsActivity"></activity><activity android:name="com.filedialog.FileDialog"></activity>
-        
-        
-        
+        <activity android:name=".activity.transport.transpimport.TransportImportActivity" >
+        </activity>
+        <activity android:name=".activity.transport.transpexport.TransportExportActivity" >
+        </activity>
+        <activity android:name=".activity.settings.SettingsActivity" >
+        </activity>
+        <activity android:name="com.filedialog.FileDialog" >
+        </activity>
     </application>
 
 </manifest>
