--- a/terminal/.classpath
+++ b/terminal/.classpath
@@ -2,8 +2,9 @@
 <classpath>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="ru/mmb/terminal/activity/settings/SelectDeviceDialogFragment.java" kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry kind="lib" path="libs/android-support-v4.jar" sourcepath="D:/Program Files/Android/android-sdk/extras/android/support/v4/src"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
