--- a/terminal/AndroidManifest.xml
+++ b/terminal/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".activity.input.data.InputDataActivity" />
         <activity android:name=".activity.input.withdraw.WithdrawMemberActivity" />
         <activity android:name=".activity.transport.transpimport.TransportImportActivity" />
+        <activity android:name=".activity.transport.transpimport.TransportImportBarcodeActivity" />
         <activity android:name=".activity.transport.transpexport.TransportExportActivity" />
         <activity android:name=".activity.settings.SettingsActivity" />
         <activity android:name="com.filedialog.FileDialog" >
