--- a/terminal/AndroidManifest.xml
+++ b/terminal/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity android:name=".activity.transport.transpimport.TransportImportBarcodeActivity" />
         <activity android:name=".activity.transport.transpexport.TransportExportActivity" />
         <activity android:name=".activity.report.ResultsActivity" />
+        <activity android:name=".activity.report.global.ReportGlobalResultActivity" />
         <activity
             android:name=".activity.report.team.search.SearchTeamActivity"
             android:windowSoftInputMode="stateHidden" />
