--- a/datacollector/datacollector_tablet/app/src/main/AndroidManifest.xml
+++ b/datacollector/datacollector_tablet/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".application.ApplicationWithSingletonsInit"
         android:allowBackup="true"
         android:icon="@mipmap/mmb"
         android:label="@string/app_name"
