--- a/datacollector/datacollector_server/.classpath
+++ b/datacollector/datacollector_server/.classpath
@@ -17,5 +17,10 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/log4j-core-2.2.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/log4j-web-2.2.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/log4j-api-2.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-dbcp2-2.0.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-pool2-2.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-5.1.32-bin.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/datacollector-model.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
