--- a/datacollector/datacollector_server/WebContent/WEB-INF/web.xml
+++ b/datacollector/datacollector_server/WebContent/WEB-INF/web.xml
@@ -1,6 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="ru.mmb.datacollector.server" version="3.0">
   <display-name>datacollector_server</display-name>
+  <context-param>
+  	<param-name>current.raid.id</param-name>
+  	<param-value>23</param-value>
+  </context-param>
+  <context-param>
+  	<param-name>mysql.connection.pool.size</param-name>
+  	<param-value>10</param-value>
+  </context-param>
+  <context-param>
+  	<param-name>mysql.connection.string</param-name>
+  	<param-value>jdbc:mysql://localhost:3306/datacollector</param-value>
+  </context-param>
+  <context-param>
+  	<param-name>mysql.connection.username</param-name>
+  	<param-value>datacollector</param-value>
+  </context-param>
+  <context-param>
+  	<param-name>mysql.connection.password</param-name>
+  	<param-value>datacollector</param-value>
+  </context-param>
   <security-constraint>
     <web-resource-collection>
       <web-resource-name>All Access</web-resource-name>
