--- a/datacollector/datacollector_server/.classpath
+++ b/datacollector/datacollector_server/.classpath
@@ -22,5 +22,7 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-pool2-2.2.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/mysql-connector-java-5.1.32-bin.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/datacollector-model.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-fileupload-1.3.1.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-io-2.4.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
