--- a/datacollector/datacollector_server/.classpath
+++ b/datacollector/datacollector_server/.classpath
@@ -24,5 +24,6 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/datacollector-model.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-fileupload-1.3.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-codec-1.10.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
