datacollector_server Загружать с сервера не только таблицы результатов, но и RAW.

--- a/datacollector/datacollector_server/build.xml
+++ b/datacollector/datacollector_server/build.xml
@@ -87,5 +87,7 @@
 	        basedir="WebContent"
 	        needxmlfile="false">
 	    </war>
+		<delete dir="WebContent/WEB-INF/classes/org"/>
+		<delete dir="WebContent/WEB-INF/classes/ru"/>
 	</target>
 </project>
