removed all unnecessary features from datacollector

--- a/datacollector/datacollector_tablet/app/src/main/AndroidManifest.xml
+++ b/datacollector/datacollector_tablet/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ru.mmb.datacollector">
 
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
@@ -25,7 +24,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.transport.TransportInputActivity" />
-        <activity android:name=".activity.transport.TransportReportActivity" />
         <activity android:name=".activity.input.start.StartInputActivity" />
         <activity android:name=".activity.input.scanpoint.SelectScanPointActivity" />
         <activity
@@ -35,11 +33,6 @@
         <activity android:name=".activity.input.data.withdraw.WithdrawMemberActivity" />
         <activity android:name=".activity.transport.transpimport.TransportImportActivity" />
         <activity android:name=".activity.transport.transpexport.TransportExportActivity" />
-        <activity android:name=".activity.report.ResultsActivity" />
-        <activity android:name=".activity.report.global.ReportGlobalResultActivity" />
-        <activity
-            android:name=".activity.report.team.result.TeamResultActivity"
-            android:windowSoftInputMode="stateHidden" />
         <activity android:name=".activity.settings.SettingsActivity" />
         <activity android:name="com.filedialog.FileDialog" />
         <activity android:name=".activity.input.bclogger.start.StartWorkWithBCLoggerActivity" />
@@ -47,10 +40,6 @@
         <activity android:name=".activity.input.bclogger.settings.LoggerSettingsActivity" />
         <activity android:name=".activity.input.bclogger.dataload.LoggerDataLoadActivity" />
         <activity android:name=".activity.input.bclogger.fileimport.LoggerFileImportActivity" />
-        <activity android:name=".activity.transport.bclogger.receive.TransportLoggerReceiveActivity" />
-        <activity android:name=".activity.transport.bclogger.send.TransportLoggerSendActivity" />
-        <activity android:name=".activity.transport.http.send.TransportHttpSendActivity" />
-        <activity android:name=".activity.transport.http.receive.TransportHttpReceiveActivity" />
         <activity android:name=".activity.report.team.search.start.TeamSearchStartActivity" />
         <activity
             android:name=".activity.report.team.search.search.TeamSearchActivity"
