Added files via upload
functionality upgraded

--- a/bc_reader/application_software_examples/BC_Logger_control_win/BC_Logger_control/BC_Logger_control.csproj
+++ b/bc_reader/application_software_examples/BC_Logger_control_win/BC_Logger_control/BC_Logger_control.csproj
@@ -13,7 +13,7 @@
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <TargetFrameworkProfile />
-    <PublishUrl>D:\bclogger\</PublishUrl>
+    <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
