--- a/bc_reader/android/loggermanager/app/src/main/AndroidManifest.xml
+++ b/bc_reader/android/loggermanager/app/src/main/AndroidManifest.xml
@@ -14,18 +14,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <receiver android:name="com.commonsware.cwac.wakeful.AlarmReceiver">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-            </intent-filter>
-
-            <meta-data
-                android:name="com.commonsware.cwac.wakeful"
-                android:resource="@xml/wakeful" />
-        </receiver>
-
-        <service android:name=".service.UpdateTimeService"></service>
-
+        
         <activity
             android:name=".activity.MainActivity"
             android:windowSoftInputMode="stateHidden">
@@ -35,6 +24,8 @@
             </intent-filter>
         </activity>
         <activity android:name="com.filedialog.FileDialog" />
+
+        <receiver android:name=".service.UpdateTimeAlarmReceiver" />
     </application>
 
 </manifest>
