--- a/datacollector/datacollector_tablet/.gitignore
+++ b/datacollector/datacollector_tablet/.gitignore
@@ -1,9 +1,10 @@
-.idea
-.gradle
+/.idea
+/.gradle
 /local.properties
 .DS_Store
 /build
 /install
+*.iml
 
 doc_work/UserGuide_v2.0.pdf
 doc_work/screenshots
