--- a/SportiduinoManager/app/src/main/AndroidManifest.xml
+++ b/SportiduinoManager/app/src/main/AndroidManifest.xml
@@ -1,32 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="ru.mmb.sportiduinomanager"
-    android:versionCode="00003"
-    android:versionName="0.0.003"
-    >
+    android:versionCode="00004"
+    android:versionName="0.0.004">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+
     <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme"
+        android:name="MainApplication"
         android:allowBackup="true"
-        android:supportsRtl="true"
+        android:icon="@drawable/ic_launcher"
         android:installLocation="auto"
-        android:name=".MainApplication" >
-        <activity android:name=".MainActivity"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
+        tools:targetApi="m">
+        <activity
+            android:name="MainActivity"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DatabaseActivity" />
-        <activity android:name=".BluetoothActivity" />
-        <activity android:name=".ChipInitActivity" />
+        <activity android:name="DatabaseActivity" />
+        <activity android:name="BluetoothActivity" />
+        <activity android:name="ChipInitActivity" />
     </application>
 </manifest>
