--- a/SportiduinoManager/app/build.gradle
+++ b/SportiduinoManager/app/build.gradle
@@ -39,7 +39,7 @@ android {
     }
 
     dependencies {
-        def acraVersion = '5.2.1'
+        final def acraVersion = '5.3.0'
         implementation "ch.acra:acra-core:$acraVersion"
         implementation "ch.acra:acra-http:$acraVersion"
         implementation "ch.acra:acra-toast:$acraVersion"
