--- a/SportiduinoManager/app/build.gradle
+++ b/SportiduinoManager/app/build.gradle
@@ -3,6 +3,9 @@ plugins {
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
+
 android {
 
     compileSdkVersion 28
@@ -19,12 +22,6 @@ android {
         resConfigs "ru", "en"
     }
 
-    dependencies {
-        implementation "com.android.support:appcompat-v7:28.0.0"
-        implementation "com.android.support:design:28.0.0"
-        implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    }
-
     buildTypes {
         debug {
             minifyEnabled false
@@ -36,13 +33,6 @@ android {
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt')
         }
-    }
-
-    dependencies {
-        final def acraVersion = '5.3.0'
-        implementation "ch.acra:acra-core:$acraVersion"
-        implementation "ch.acra:acra-http:$acraVersion"
-        implementation "ch.acra:acra-toast:$acraVersion"
     }
 }
 
@@ -105,4 +95,22 @@ sourceSets {
      main {
        java.srcDirs = ['src/main/java']
      }
+}
+
+dependencies {
+    implementation "com.android.support:appcompat-v7:28.0.0"
+    implementation "com.android.support:design:28.0.0"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+    final def acraVersion = '5.3.0'
+    implementation "ch.acra:acra-core:$acraVersion"
+    implementation "ch.acra:acra-http:$acraVersion"
+    implementation "ch.acra:acra-toast:$acraVersion"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
