SportiduinoManager: update tools versions and make validators happy

--- a/SportiduinoManager/app/src/main/AndroidManifest.xml
+++ b/SportiduinoManager/app/src/main/AndroidManifest.xml
@@ -38,6 +38,6 @@
         <activity android:name="ChipInitActivity" />
         <activity android:name="ChipInfoActivity" />
         <activity android:name="ActivePointActivity" />
-        <service android:name=".StationPoolingService"/>
+        <service android:name="StationPoolingService" />
     </application>
 </manifest>
