--- a/SportiduinoManager/app/build.gradle
+++ b/SportiduinoManager/app/build.gradle
@@ -1,13 +1,15 @@
+import com.github.spotbugs.SpotBugsTask
 plugins {
-    id 'com.github.spotbugs' version '1.6.10'
+    id "com.github.spotbugs" version "2.0.0"
 }
-
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'checkstyle'
+apply plugin: 'pmd'
+apply plugin: 'com.github.spotbugs'
 
 android {
-
     compileSdkVersion 28
 
     compileOptions {
@@ -36,10 +38,8 @@ android {
     }
 }
 
-
-apply plugin: 'checkstyle'
 checkstyle {
-    toolVersion "8.14"
+    toolVersion "8.19"
 }
 task checkstyle(type: Checkstyle) {
     group 'verification'
@@ -49,21 +49,8 @@ task checkstyle(type: Checkstyle) {
     classpath = files()
 }
 
-apply plugin: 'findbugs'
-task findbugs(type: FindBugs) {
-    group 'verification'
-    ignoreFailures = true
-    effort = "max"
-    reportLevel = "high"
-    classes = files("build/intermediates/javac/debug")
-    source 'src'
-    include '**/*.java'
-    classpath = files()
-}
-
-apply plugin: 'pmd'
 pmd {
-    toolVersion "6.11.0"
+    toolVersion "6.13.0"
 }
 task pmd(type: Pmd) {
     group 'verification'
@@ -74,9 +61,9 @@ task pmd(type: Pmd) {
 }
 
 spotbugs {
-    toolVersion = '3.1.11'
+    toolVersion = '4.0.0-beta3'
 }
-tasks.withType(com.github.spotbugs.SpotBugsTask) {
+tasks.withType(SpotBugsTask) {
     group = "verification"
     ignoreFailures = true
     effort = "max"
@@ -86,8 +73,8 @@ tasks.withType(com.github.spotbugs.SpotBugsTask) {
     include '**/*.java'
     classpath = files()
     reports {
-        xml.enabled = false
-        html.enabled = true
+        xml.enabled = true
+        html.enabled = false
     }
 }
 sourceSets {
@@ -102,14 +89,15 @@ dependencies {
     implementation "com.android.support:design:28.0.0"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
     implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
-    final def acraVersion = '5.3.0'
+    final def acraVersion = '5.4.0'
     implementation "ch.acra:acra-core:$acraVersion"
     implementation "ch.acra:acra-http:$acraVersion"
     implementation "ch.acra:acra-toast:$acraVersion"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 repositories {
     mavenCentral()
