SportiduinoManager: some more variables renaming + adaptation for Android API 14

--- a/SportiduinoManager/app/src/main/AndroidManifest.xml
+++ b/SportiduinoManager/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         <activity android:name="BluetoothActivity" />
         <activity android:name="ChipInitActivity" />
         <activity android:name="ChipInfoActivity" />
-        <activity android:name="ActivePointActivity" />
+        <activity android:name="ControlPointActivity" />
         <service android:name="StationPoolingService" />
     </application>
 </manifest>
