--- a/SportiduinoManager/app/build.gradle
+++ b/SportiduinoManager/app/build.gradle
@@ -39,7 +39,7 @@ android {
 }
 
 checkstyle {
-    toolVersion "8.19"
+    toolVersion "8.25"
 }
 task checkstyle(type: Checkstyle) {
     group 'verification'
@@ -50,7 +50,7 @@ task checkstyle(type: Checkstyle) {
 }
 
 pmd {
-    toolVersion "6.13.0"
+    toolVersion "6.18.0"
 }
 task pmd(type: Pmd) {
     group 'verification'
@@ -61,7 +61,7 @@ task pmd(type: Pmd) {
 }
 
 spotbugs {
-    toolVersion = '4.0.0-beta3'
+    toolVersion = '4.0.0-beta4'
 }
 tasks.withType(SpotBugsTask) {
     group = "verification"
@@ -89,9 +89,9 @@ dependencies {
     implementation "com.android.support:design:28.0.0"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlin_version}"
 
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.13'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
     final def acraVersion = '5.4.0'
