--- a/SportiduinoManager/app/src/main/AndroidManifest.xml
+++ b/SportiduinoManager/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         tools:ignore="GoogleAppIndexingWarning"
         tools:targetApi="m">
         <activity
-            android:name="MainActivity"
+            android:name="MenuActivity"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
