--- a/SportiduinoManager/app/build.gradle
+++ b/SportiduinoManager/app/build.gradle
@@ -1,4 +1,5 @@
 import com.github.spotbugs.SpotBugsTask
+
 plugins {
     id "com.github.spotbugs" version "2.0.0"
 }
@@ -13,6 +14,15 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    signingConfigs {
+        release {
+            storeFile file(SPORTIDUINO_STORE_FILE)
+            storePassword SPORTIDUINO_STORE_PASSWORD
+            keyAlias SPORTIDUINO_KEY_ALIAS
+            keyPassword SPORTIDUINO_KEY_PASSWORD
+        }
     }
 
     defaultConfig {
@@ -75,10 +85,10 @@ tasks.withType(SpotBugsTask) {
     }
 }
 sourceSets {
-     // we define `main` sourceSet here, so SpotBugs Gradle Plugin generates `spotbugsMain` task
-     main {
-       java.srcDirs = ['src/main/java']
-     }
+    // we define `main` sourceSet here, so SpotBugs Gradle Plugin generates `spotbugsMain` task
+    main {
+        java.srcDirs = ['src/main/java']
+    }
 }
 
 dependencies {
