--- a/SportiduinoManager/app/build.gradle
+++ b/SportiduinoManager/app/build.gradle
@@ -1,7 +1,6 @@
-import com.github.spotbugs.SpotBugsTask
-
+import com.github.spotbugs.snom.SpotBugsTask
 plugins {
-    id "com.github.spotbugs" version "2.0.0"
+    id "com.github.spotbugs" version "4.5.1"
 }
 apply plugin: 'com.android.application'
 apply plugin: 'checkstyle'
@@ -47,7 +46,7 @@ android {
 }
 
 checkstyle {
-    toolVersion "8.25"
+    toolVersion "8.36.2"
 }
 task checkstyle(type: Checkstyle) {
     group 'verification'
@@ -58,7 +57,7 @@ task checkstyle(type: Checkstyle) {
 }
 
 pmd {
-    toolVersion "6.18.0"
+    toolVersion "6.28.0"
 }
 task pmd(type: Pmd) {
     group 'verification'
@@ -68,33 +67,21 @@ task pmd(type: Pmd) {
     include '**/*.java'
 }
 
-spotbugs {
-    toolVersion = '4.0.0-beta4'
-}
 tasks.withType(SpotBugsTask) {
-    dependsOn "compileDebugSources"
     group = "verification"
-    ignoreFailures = true
-    effort = "max"
-    reportLevel = "high"
-    classes = files("build/intermediates/javac/debug")
-    classpath = files()
+    excludeFilter = file("${project.rootDir}/config/spotbugs/spotbugs-exclude.xml")
     reports {
         xml.enabled = true
-        html.enabled = false
-    }
-}
-sourceSets {
-    // we define `main` sourceSet here, so SpotBugs Gradle Plugin generates `spotbugsMain` task
-    main {
-        java.srcDirs = ['src/main/java']
+        html.enabled = true
     }
 }
 
 dependencies {
     implementation "com.android.support:appcompat-v7:28.0.0"
     implementation "com.android.support:design:28.0.0"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.1'
+
+    spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.10.1'
 
     final def acraVersion = '5.4.0'
     implementation "ch.acra:acra-core:$acraVersion"
